[metadata]
name = satsr
summary = A project to perform super-resolution on satellite imagery
description-file =
    README.md
author = Ignacio Heredia (CSIC)
author-email = iheredia@ifca.unican.es
version = 0.0.1
license = MIT
home-page = http://github.com/deephdc/satsr
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    satsr

[entry_points]

deepaas.v2.model =
    satsr = satsr.api

